--- a/features/absolute-positioning.yml.dist
+++ b/features/absolute-positioning.yml.dist
@@ -33,6 +33,8 @@ compat_features:
   #   chrome: "122"
   #   chrome_android: "122"
   #   edge: "122"
+  #   firefox: "134"
+  #   firefox_android: "134"
   - css.properties.align-self.position_absolute_context
   - css.properties.justify-self.position_absolute_context
   - css.properties.place-self.position_absolute_context
