--- a/features/dialog.yml.dist
+++ b/features/dialog.yml.dist
@@ -39,6 +39,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "132"
+  #   chrome_android: "132"
   #   firefox: "133"
   #   firefox_android: "133"
   - api.HTMLElement.beforetoggle_event.dialog_elements
