--- a/features/draft/spec/indexeddb-3.yml.dist
+++ b/features/draft/spec/indexeddb-3.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "132"
+    chrome_android: "132"
     firefox: "16"
     firefox_android: "22"
     safari: "8"
