--- a/features/draganddrop.yml.dist
+++ b/features/draganddrop.yml.dist
@@ -194,5 +194,6 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "86"
+  #   chrome_android: "132"
   #   edge: "86"
   - api.DataTransferItem.getAsFileSystemHandle
