--- a/features/file-system-access.yml.dist
+++ b/features/file-system-access.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "86"
+    chrome_android: "132"
     edge: "86"
 compat_features:
   # baseline: low
@@ -44,6 +45,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "86"
+  #   chrome_android: "132"
   #   edge: "86"
   - api.Window.showDirectoryPicker
   - api.Window.showOpenFilePicker
