--- a/features/wasm-string-builtins.yml.dist
+++ b/features/wasm-string-builtins.yml.dist
@@ -6,5 +6,7 @@ status:
   support:
     chrome: "130"
     edge: "130"
+    firefox: "134"
+    firefox_android: "134"
 compat_features:
   - webassembly.jsStringBuiltins
