--- a/features/writing-mode.yml.dist
+++ b/features/writing-mode.yml.dist
@@ -46,6 +46,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "132"
+  #   chrome_android: "132"
   #   firefox: "43"
   #   firefox_android: "43"
   - css.properties.writing-mode.sideways-lr
