--- a/features/draft/spec/element-capture.yml.dist
+++ b/features/draft/spec/element-capture.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "132"
 compat_features:
   - api.BrowserCaptureMediaStreamTrack.restrictTo
   - api.RestrictionTarget
