--- a/features/draft/spec/webauthn-3.yml.dist
+++ b/features/draft/spec/webauthn-3.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "132"
 compat_features:
   - api.PublicKeyCredential.signalAllAcceptedCredentials_static
   - api.PublicKeyCredential.signalCurrentUserDetails_static
