--- a/features/fetch.yml.dist
+++ b/features/fetch.yml.dist
@@ -407,6 +407,17 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "132"
+  #   chrome_android: "132"
+  #   firefox: "128"
+  #   firefox_android: "128"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.Request.bytes
+  - api.Response.bytes
+
+  # baseline: false
+  # support:
   #   chrome: "105"
   #   chrome_android: "105"
   #   edge: "105"
@@ -430,15 +441,6 @@ compat_features:
   #   safari: "16.1"
   #   safari_ios: "16.1"
   - api.fetch.authorization_removed_cross_origin
-
-  # baseline: false
-  # support:
-  #   firefox: "128"
-  #   firefox_android: "128"
-  #   safari: "18"
-  #   safari_ios: "18"
-  - api.Request.bytes
-  - api.Response.bytes
 
   # baseline: false
   # support:
