--- a/features/regexp-escape.yml.dist
+++ b/features/regexp-escape.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    firefox: "134"
+    firefox_android: "134"
     safari: "18.2"
     safari_ios: "18.2"
 compat_features:
