--- a/features/speculation-rules.yml.dist
+++ b/features/speculation-rules.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "127"
+    chrome_android: "127"
 compat_features:
   # baseline: false
   # support:
@@ -80,11 +82,13 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "127"
+  #   chrome_android: "127"
+  #   edge: "127"
+  - html.elements.script.type.speculationrules.expects_no_vary_search
+
+  # baseline: false
+  # support:
   #   chrome: "110"
   #   chrome_android: "109"
   - html.elements.script.type.speculationrules.requires.anonymous-client-ip-when-cross-origin
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - html.elements.script.type.speculationrules.expects_no_vary_search
