--- a/features/streams.yml.dist
+++ b/features/streams.yml.dist
@@ -233,6 +233,18 @@ compat_features:
   #   safari_ios: "16.4"
   - api.WritableStreamDefaultController.signal
 
+  # baseline: low
+  # baseline_low_date: 2023-09-18
+  # support:
+  #   chrome: "105"
+  #   chrome_android: "105"
+  #   edge: "105"
+  #   firefox: "102"
+  #   firefox_android: "102"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.ReadableStreamDefaultReader.releaseLock.reject_pending_read_request
+
   # baseline: false
   # support:
   #   chrome: "78"
@@ -280,6 +292,15 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "105"
+  #   chrome_android: "105"
+  #   edge: "105"
+  #   firefox: "102"
+  #   firefox_android: "102"
+  - api.ReadableStreamBYOBReader.releaseLock.reject_pending_read_request
+
+  # baseline: false
+  # support:
   #   chrome: "124"
   #   chrome_android: "124"
   #   edge: "124"
@@ -289,17 +310,12 @@ compat_features:
 
   # baseline: false
   # support:
-  #   firefox: "102"
-  #   firefox_android: "102"
-  - api.ReadableStreamBYOBReader.releaseLock.reject_pending_read_request
-  - api.ReadableStreamDefaultReader.releaseLock.reject_pending_read_request
-
-  # baseline: false
-  # support:
   #   firefox: "117"
   #   firefox_android: "117"
   - api.ReadableStream.from_static
 
   # baseline: false
-  # support: {}
+  # support:
+  #   firefox: "134"
+  #   firefox_android: "134"
   - api.ReadableStreamBYOBReader.read.options_min_parameter
