--- a/features/wasm-memory64.yml.dist
+++ b/features/wasm-memory64.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "134"
+    firefox_android: "134"
 compat_features:
   - webassembly.memory64
