--- a/features/mutation-events.yml
+++ b/features/mutation-events.yml
@@ -1,5 +1,5 @@
 name: Mutation events
-description: Mutation events like `DOMSubtreeModified`, `DOMNodeInserted`, or `DOMNodeRemoved` fire when the DOM changes occur.
+description: Mutation events like `DOMSubtreeModified`, `DOMNodeInserted`, or `DOMNodeRemoved` fire when DOM changes occur.
 # The latest spec doesn't mention them at all anymore.
 spec: https://w3c.github.io/uievents/
 discouraged:
