--- a/features/encrypted-media.yml
+++ b/features/encrypted-media.yml
@@ -1,5 +1,5 @@
 name: Encrypted media extensions
-description: Encrypted Media Extensions control the playback of content which is subject to a digital restrictions management scheme.
+description: The `mediaKeys` property of `HTMLMediaElement` and the `navigator.requestMediaKeySystemAccess()` method control the playback of content subject to digital rights management. Also known as EME.
 spec: https://w3c.github.io/encrypted-media/
 status:
   compute_from: api.Navigator.requestMediaKeySystemAccess
