--- a/features/media-transform.yml
+++ b/features/media-transform.yml
@@ -1,4 +1,4 @@
-name: MediaStreamTrack insertable media processing using streams
+name: Insertable streams for MediaStreamTrack
 description: The MediaStreamTrack Insertable Media Processing using Streams API, also known as MIMPuS, gives direct access to media streams for manipulations such as merging streams, real time effects, and content overlays.
 spec: https://w3c.github.io/mediacapture-transform/
 compat_features:
