--- a/features/media-transform.yml
+++ b/features/media-transform.yml
@@ -1,5 +1,5 @@
 name: Insertable streams for MediaStreamTrack
-description: The MediaStreamTrack Insertable Media Processing using Streams API, also known as MIMPuS, gives direct access to media streams for manipulations such as merging streams, real time effects, and content overlays.
+description: The `MediaStreamTrackProcessor` and `MediaStreamTrackGenerator` APIs modify the contents of a media track for merging streams, applying real-time effects like funny hats, and content overlays.
 spec: https://w3c.github.io/mediacapture-transform/
 compat_features:
   - api.MediaStreamTrackProcessor
