--- a/features/media-capture-region.yml
+++ b/features/media-capture-region.yml
@@ -1,5 +1,5 @@
 name: Region capture
-description: The Region Capture API lets you crop a video track derived from display-capture of the active browser tab.
+description: The `CropTarget` API crops an element from a video track derived from display-capture of the active browser tab. For example, you can crop out video conferencing during screen sharing.
 spec: https://w3c.github.io/mediacapture-region/
 compat_features:
   - api.BrowserCaptureMediaStreamTrack
