--- a/features/element-timing.yml
+++ b/features/element-timing.yml
@@ -1,6 +1,6 @@
 name: Element timing
 description: The `element` performance entry and the `PerformanceElementTiming` API measures the time to render elements that have the `elementtiming` attribute.
-spec: https://wicg.github.io/element-timing/
+spec: https://w3c.github.io/element-timing/
 group: performance
 compat_features:
   - api.Element.elementTiming
