--- a/features/keyboard-events.yml.dist
+++ b/features/keyboard-events.yml.dist
@@ -158,19 +158,6 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
-  #   chrome: "48"
-  #   chrome_android: "48"
-  #   edge: "79"
-  #   firefox: "38"
-  #   firefox_android: "38"
-  #   safari: "10.1"
-  #   safari_ios: "10.3"
-  - api.KeyboardEvent.code
-
-  # baseline: high
-  # baseline_low_date: 2020-01-15
-  # baseline_high_date: 2022-07-15
-  # support:
   #   chrome: "56"
   #   chrome_android: "56"
   #   edge: "79"
@@ -220,6 +207,15 @@ compat_features:
   #   firefox: "15"
   #   firefox_android: "15"
   - api.KeyboardEvent.getModifierState.key_parameter_numlock
+
+  # baseline: false
+  # support:
+  #   chrome: "48"
+  #   edge: "79"
+  #   firefox: "38"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - api.KeyboardEvent.code
 
   # baseline: false
   # support:
