move key from review

--- a/features/encrypted-media-extensions.yml
+++ b/features/encrypted-media-extensions.yml
@@ -11,6 +11,7 @@ compat_features:
   - api.HTMLMediaElement.mediaKeys
   - api.HTMLMediaElement.setMediaKeys
   - api.HTMLMediaElement.waitingforkey_event
+  - api.MediaCapabilities.decodingInfo.configuration_keySystemConfiguration_parameter
   - api.MediaEncryptedEvent
   - api.MediaEncryptedEvent.MediaEncryptedEvent
   - api.MediaEncryptedEvent.initData
