--- a/features/insertable-streams.yml
+++ b/features/insertable-streams.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: MediaStreamTrack Insertable Media Processing using Streams
-description: TODO
+name: Insertable streams for MediaStreamTrack
+description: The `MediaStreamTrackProcessor` and `MediaStreamTrackGenerator` APIs modify the contents of a media track for merging streams, applying real-time effects like funny hats, and content overlays.
 spec: https://w3c.github.io/mediacapture-transform/
 compat_features:
   - api.MediaStreamTrackProcessor
