--- a/features/media-playback-quality.yml
+++ b/features/media-playback-quality.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: Media Playback Quality
-description: TODO
+name: Media playback quality
+description: The `getVideoPlaybackQuality()` method of `HTMLVideoElement` returns metrics that can be used to determine the playback quality of a video, such as how many frames were dropped.
 spec: https://w3c.github.io/media-playback-quality/
 compat_features:
   - api.HTMLVideoElement.getVideoPlaybackQuality
