Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/webvr.yml
+++ b/features/webvr.yml
@@ -1,5 +1,5 @@
 name: WebVR
-description: Accessing virtual reality (VR) devices, including sensors and head-mounted displays.
+description: The `navigator.getVRDisplays()` API represents virtual reality (VR) devices, including sensors and head-mounted displays.
 spec: https://immersive-web.github.io/webvr/spec/1.1/
 caniuse: webvr
 discouraged:
