--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "npm run test:caniuse -- --quiet && npm run test:schema && npm run test:specs && npm run test:types && npm run test:format && npm run test:dist && npm run test --workspaces && npm run test:lint",
     "update-drafts": "tsx scripts/update-drafts.ts",
     "migrate-to-bcd": "tsx scripts/migrate-to-bcd.ts",
-    "cleanup-bcd-overrides": "tsx scripts/cleanup-bcd-overrides.ts"
+    "remove-tagged-compat-features": "tsx scripts/remove-tagged-compat-features.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
