--- a/features/wasm-string-builtins.yml
+++ b/features/wasm-string-builtins.yml
@@ -4,3 +4,9 @@ spec: https://github.com/WebAssembly/js-string-builtins/blob/main/proposals/js-s
 group: webassembly
 compat_features:
   - webassembly.jsStringBuiltins
+  - webassembly.api.Module.Module.compile_options
+  - webassembly.api.compile_static.compile_options
+  - webassembly.api.compileStreaming_static.compile_options
+  - webassembly.api.instantiate_static.compile_options
+  - webassembly.api.instantiateStreaming_static.compile_options
+  - webassembly.api.validate_static.compile_options
