--- a/features/overflow-overlay.yml.dist
+++ b/features/overflow-overlay.yml.dist
@@ -4,12 +4,12 @@
 status:
   baseline: false
   support:
-    chrome: "15"
-    chrome_android: "100"
-    edge: "79"
+    chrome: "114"
+    chrome_android: "114"
+    edge: "114"
     firefox: "112"
     firefox_android: "112"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "12"
+    safari_ios: "12"
 compat_features:
   - css.types.overflow.overlay
