--- a/features/async-clipboard.yml.dist
+++ b/features/async-clipboard.yml.dist
@@ -82,12 +82,9 @@ compat_features:
   #   safari_ios: "13.4"
   - api.Clipboard.type_text-html
 
-  # baseline: low
-  # baseline_low_date: 2024-06-11
+  # baseline: false
   # support:
-  #   chrome: "98"
   #   chrome_android: "98"
-  #   edge: "98"
   #   firefox: "127"
   #   firefox_android: "127"
   #   safari: "13.1"
