--- a/features/unspecified-apis.yml
+++ b/features/unspecified-apis.yml
@@ -1,5 +1,5 @@
 name: Unspecified APIs
-description: Some browsers implement unspecified APIs. This is an artificial feature that contains references to browser compatibility data entries for those additions. You should not use or rely on anything referenced by this feature.
+description: Some browsers implement unspecified APIs. This is an artificial feature that contains references to browser compatibility data entries for those additions.
 spec: link to our own documentation explaining ourselves in more detail
 discouraged:
   according_to:
