Fix omission of CSS from description
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/import-assertions.yml
+++ b/features/import-assertions.yml
@@ -1,5 +1,5 @@
 name: Import assertions
-description: 'Module `import … assert { type: "json" }` and `import … assert { type: "css" }` JavaScript statements load JSON data.'
+description: 'Module `import … assert { type: "json" }` and `import … assert { type: "css" }` JavaScript statements load JSON and CSS data.'
 spec: https://github.com/tc39/proposal-import-attributes/tree/abca60286360b47f9a6be25a28f489c2cb157beb
 discouraged:
   according_to:
