--- a/features/anchor-positioning.yml.dist
+++ b/features/anchor-positioning.yml.dist
@@ -202,6 +202,7 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   - css.properties.bottom.anchor-size
   - css.properties.inset-block-end.anchor-size
   - css.properties.inset-block-start.anchor-size
