--- a/features/device-posture.yml.dist
+++ b/features/device-posture.yml.dist
@@ -9,6 +9,7 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   - api.DevicePosture
   - api.DevicePosture.change_event
   - api.DevicePosture.type
