--- a/features/dialog.yml.dist
+++ b/features/dialog.yml.dist
@@ -41,6 +41,7 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   #   firefox: "133"
   #   firefox_android: "133"
   - api.HTMLElement.beforetoggle_event.dialog_elements
