--- a/features/draft/spec/element-capture.yml.dist
+++ b/features/draft/spec/element-capture.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "132"
+    edge: "132"
 compat_features:
   - api.BrowserCaptureMediaStreamTrack.restrictTo
   - api.RestrictionTarget
