--- a/features/draft/spec/fedcm-1.yml.dist
+++ b/features/draft/spec/fedcm-1.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "132"
     chrome_android: "132"
+    edge: "132"
 compat_features:
   # baseline: false
   # support:
@@ -42,4 +43,5 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   - api.IdentityProvider.resolve_static
