--- a/features/push.yml.dist
+++ b/features/push.yml.dist
@@ -151,10 +151,12 @@ compat_features:
   #   safari_ios: "16.4"
   - api.PushManager.supportedContentEncodings_static
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2025-01-17
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   #   firefox: "128"
   #   firefox_android: "128"
   #   safari: "18"
