--- a/features/webgpu.yml.dist
+++ b/features/webgpu.yml.dist
@@ -406,6 +406,7 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   - api.GPUDevice.adapterInfo
 
   # baseline: false
