--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -295,8 +295,9 @@ compat_features:
   #   safari_ios: "15.4"
   - css.properties.flex-basis.content
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-07-20
+  # baseline_high_date: 2025-01-20
   # support:
   #   chrome: "93"
   #   chrome_android: "93"
