--- a/features/writing-mode.yml.dist
+++ b/features/writing-mode.yml.dist
@@ -48,6 +48,7 @@ compat_features:
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
+  #   edge: "132"
   #   firefox: "43"
   #   firefox_android: "43"
   - css.properties.writing-mode.sideways-lr
