Add missing key to `title` HTML global attribute

--- a/features/title-attr.yml.dist
+++ b/features/title-attr.yml.dist
@@ -40,3 +40,16 @@ compat_features:
   #   safari: ≤4
   #   safari_ios: ≤3.2
   - html.global_attributes.title
+
+  # baseline: high
+  # baseline_low_date: ≤2018-01-23
+  # baseline_high_date: ≤2020-07-23
+  # support:
+  #   chrome: ≤64
+  #   chrome_android: ≤64
+  #   edge: "12"
+  #   firefox: ≤58
+  #   firefox_android: ≤58
+  #   safari: ≤11
+  #   safari_ios: ≤11
+  - html.global_attributes.title.multi-line_titles
