--- a/features/title-attr.yml
+++ b/features/title-attr.yml
@@ -1,4 +1,4 @@
-name: Title
+name: title (attribute)
 description: The `title` global HTML attribute sets information about an element, such as a name or description. The value is typically shown as a tooltip that appears on mouse over. Since it's not often available to touch-only, keyboard-only, or assistive technology users, it's not a substitute for other text.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-title
 status:
