--- a/features/contenteditable.yml.dist
+++ b/features/contenteditable.yml.dist
@@ -3,16 +3,16 @@
 
 status:
   baseline: high
-  baseline_low_date: 2021-12-07
-  baseline_high_date: 2024-06-07
+  baseline_low_date: 2015-07-29
+  baseline_high_date: 2018-01-29
   support:
-    chrome: "66"
-    chrome_android: "66"
-    edge: "79"
-    firefox: "95"
-    firefox_android: "79"
-    safari: "12.1"
-    safari_ios: "12.2"
+    chrome: "1"
+    chrome_android: "18"
+    edge: "12"
+    firefox: "4"
+    firefox_android: "4"
+    safari: ≤4
+    safari_ios: ≤3.2
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -52,17 +52,3 @@ compat_features:
   #   safari: "3"
   #   safari_ios: "1"
   - api.HTMLElement.isContentEditable
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: high
-  # baseline_low_date: 2021-12-07
-  # baseline_high_date: 2024-06-07
-  # support:
-  #   chrome: "66"
-  #   chrome_android: "66"
-  #   edge: "79"
-  #   firefox: "95"
-  #   firefox_android: "79"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.HTMLElement.inputMode
