Update Web Speech API specification URLs

--- a/features/speech-recognition.yml
+++ b/features/speech-recognition.yml
@@ -1,6 +1,6 @@
 name: Speech recognition
 description: The `SpeechRecognition` API converts audio into text using the device's speech recognition service.
-spec: https://wicg.github.io/speech-api/
+spec: https://webaudio.github.io/web-speech-api/#speechreco-section
 group: speech
 caniuse: speech-recognition
 compat_features:
