--- a/features/speech-synthesis.yml
+++ b/features/speech-synthesis.yml
@@ -1,6 +1,6 @@
 name: Speech synthesis
 description: The `SpeechSynthesis` API converts text to speech with artificial voices.
-spec: https://wicg.github.io/speech-api/#tts-section
+spec: https://webaudio.github.io/web-speech-api/#tts-section
 group: speech
 caniuse: speech-synthesis
 status:
