--- a/features/draft/spec/entries-api.yml.dist
+++ b/features/draft/spec/entries-api.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "22"
+    chrome_android: "132"
     edge: "79"
     firefox: "52"
     safari: "11.1"
@@ -120,6 +121,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "7"
+  #   chrome_android: "132"
   #   edge: "13"
   #   firefox: "50"
   #   safari: "11.1"
