Revise page breaks description

--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -1,5 +1,5 @@
 name: Page breaks
-description: The `break-after`, `break-before`, `break-inside` CSS properties control where printed pages start and end. Also known as pagination or page breaking.
+description: In printed page layouts, the `break-after`, `break-before`, `break-inside` CSS properties control where printed pages start and end. Also known as pagination or page breaking.
 spec: https://drafts.csswg.org/css-break-4/#breaking-controls
 group: layout
 # TODO: review this when https://github.com/web-platform-dx/web-features/issues/1878 is resolved
