`details`: add keys for `<summary>` element

--- a/features/details.yml
+++ b/features/details.yml
@@ -12,3 +12,5 @@ compat_features:
   - api.HTMLElement.toggle_event.details_elements
   - html.elements.details
   - html.elements.details.open
+  - html.elements.summary
+  - html.elements.summary.display_list_item
