--- a/features/title-attr.yml
+++ b/features/title-attr.yml
@@ -1,6 +1,9 @@
-name: Title
+name: title (attribute)
 description: The `title` global HTML attribute sets information about an element, such as a name or description. The value is typically shown as a tooltip that appears on mouse over. Since it's not often available to touch-only, keyboard-only, or assistive technology users, it's not a substitute for other text.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-title
+status:
+  compute_from: html.global_attributes.title
 compat_features:
   - api.HTMLElement.title
   - html.global_attributes.title
+  - html.global_attributes.title.multi-line_titles
