--- a/features/meter.yml
+++ b/features/meter.yml
@@ -1,5 +1,5 @@
 name: <meter>
-description: The `<meter>` element represents either a scalar value within a known range or a fractional value, and is typically rendered as a progress bar.
+description: The `<meter>` element represents a scalar value within a known range or a fractional value, typically shown as a progress bar.
 spec: https://html.spec.whatwg.org/multipage/form-elements.html#the-meter-element
 group:
   - forms
