`intl`: add constructor symbol keys
References: https://github.com/mdn/browser-compat-data/pull/25749

--- a/features/intl.yml
+++ b/features/intl.yml
@@ -26,6 +26,7 @@ compat_features:
   - javascript.builtins.Intl.Collator.supportedLocalesOf
   - javascript.builtins.Intl.DateTimeFormat
   - javascript.builtins.Intl.DateTimeFormat.DateTimeFormat
+  - javascript.builtins.Intl.DateTimeFormat.DateTimeFormat.IntlLegacyConstructedSymbol
   - javascript.builtins.Intl.DateTimeFormat.DateTimeFormat.locales_parameter
   - javascript.builtins.Intl.DateTimeFormat.DateTimeFormat.options_parameter
   - javascript.builtins.Intl.DateTimeFormat.DateTimeFormat.options_parameter.options_calendar_parameter
@@ -48,6 +49,7 @@ compat_features:
   - javascript.builtins.Intl.DateTimeFormat.supportedLocalesOf
   - javascript.builtins.Intl.NumberFormat
   - javascript.builtins.Intl.NumberFormat.NumberFormat
+  - javascript.builtins.Intl.NumberFormat.NumberFormat.IntlLegacyConstructedSymbol
   - javascript.builtins.Intl.NumberFormat.NumberFormat.locales_parameter
   - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter
   - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_compactDisplay_parameter
