--- a/features/meter.yml
+++ b/features/meter.yml
@@ -1,8 +1,9 @@
-draft_date: 2024-06-05
 name: <meter>
-description: The `<meter>` element TODO.
+description: The `<meter>` element represents a scalar value within a known range or a fractional value, typically shown as a progress bar.
 spec: https://html.spec.whatwg.org/multipage/form-elements.html#the-meter-element
-group: forms
+group:
+  - forms
+  - html-elements
 caniuse: meter
 compat_features:
   - api.HTMLMeterElement
