--- a/features/scroll-snap.yml.dist
+++ b/features/scroll-snap.yml.dist
@@ -140,8 +140,9 @@ compat_features:
   - css.properties.scroll-snap-type.x
   - css.properties.scroll-snap-type.y
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-07-26
+  # baseline_high_date: 2025-01-26
   # support:
   #   chrome: "75"
   #   chrome_android: "75"
