--- a/features/service-workers.yml.dist
+++ b/features/service-workers.yml.dist
@@ -405,8 +405,9 @@ compat_features:
   - api.NavigationPreloadManager.getState
   - api.NavigationPreloadManager.setHeaderValue
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-07-26
+  # baseline_high_date: 2025-01-26
   # support:
   #   chrome: "65"
   #   chrome_android: "65"
