--- a/features/storage-access.yml.dist
+++ b/features/storage-access.yml.dist
@@ -46,12 +46,14 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "113"
+  #   chrome_android: "120"
+  #   edge: "113"
+  - api.Permissions.permission_top-level-storage-access
+
+  # baseline: false
+  # support:
   #   chrome: "119"
   #   chrome_android: "119"
   #   edge: "119"
   - api.Document.requestStorageAccessFor
-
-  # baseline: false
-  # support:
-  #   chrome_android: "120"
-  - api.Permissions.permission_top-level-storage-access
