--- a/features/clear-site-data.yml.dist
+++ b/features/clear-site-data.yml.dist
@@ -58,7 +58,5 @@ compat_features:
   - http.headers.Clear-Site-Data.clientHints
 
   # baseline: false
-  # support:
-  #   safari: "17"
-  #   safari_ios: "17"
+  # support: {}
   - http.headers.Clear-Site-Data.executionContexts
