--- a/features/streams.yml
+++ b/features/streams.yml
@@ -1,7 +1,6 @@
 name: Streams
 description: The streams API creates, composes, and consumes continuously generated data.
 spec: https://streams.spec.whatwg.org/
-caniuse: streams
 group: streams
 # TODO: https://github.com/web-platform-dx/web-features/issues/1971
 # Status changed: https://github.com/web-platform-dx/web-features/pull/2358
@@ -10,25 +9,10 @@ group: streams
 # - https://caniuse.com/streams
 status:
   compute_from:
-    - api.ReadableStreamBYOBReader
+    - api.ReadableStream
+    - api.TransformStream
+    - api.WritableStream
 compat_features:
-  - api.ReadableByteStreamController
-  - api.ReadableByteStreamController.byobRequest
-  - api.ReadableByteStreamController.close
-  - api.ReadableByteStreamController.desiredSize
-  - api.ReadableByteStreamController.enqueue
-  - api.ReadableByteStreamController.error
-  - api.ReadableStreamBYOBReader
-  - api.ReadableStreamBYOBReader.ReadableStreamBYOBReader
-  - api.ReadableStreamBYOBReader.cancel
-  - api.ReadableStreamBYOBReader.closed
-  - api.ReadableStreamBYOBReader.read
-  - api.ReadableStreamBYOBReader.releaseLock
-  - api.ReadableStreamBYOBReader.releaseLock.reject_pending_read_request
-  - api.ReadableStreamBYOBRequest
-  - api.ReadableStreamBYOBRequest.respond
-  - api.ReadableStreamBYOBRequest.respondWithNewView
-  - api.ReadableStreamBYOBRequest.view
   - api.ReadableStreamDefaultController
   - api.ReadableStreamDefaultController.close
   - api.ReadableStreamDefaultController.desiredSize
