--- a/features/reporting.yml.dist
+++ b/features/reporting.yml.dist
@@ -30,6 +30,52 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "69"
+  #   chrome_android: "69"
+  #   edge: "79"
+  - api.DeprecationReportBody
+  - api.DeprecationReportBody.anticipatedRemoval
+  - api.DeprecationReportBody.columnNumber
+  - api.DeprecationReportBody.id
+  - api.DeprecationReportBody.lineNumber
+  - api.DeprecationReportBody.message
+  - api.DeprecationReportBody.sourceFile
+  - api.DeprecationReportBody.toJSON
+  - api.InterventionReportBody
+  - api.InterventionReportBody.columnNumber
+  - api.InterventionReportBody.id
+  - api.InterventionReportBody.lineNumber
+  - api.InterventionReportBody.message
+  - api.InterventionReportBody.sourceFile
+  - api.InterventionReportBody.toJSON
+
+  # baseline: false
+  # support:
+  #   chrome: "74"
+  #   chrome_android: "74"
+  #   edge: "79"
+  - api.CSPViolationReportBody
+  - api.CSPViolationReportBody.blockedURL
+  - api.CSPViolationReportBody.columnNumber
+  - api.CSPViolationReportBody.disposition
+  - api.CSPViolationReportBody.documentURL
+  - api.CSPViolationReportBody.effectiveDirective
+  - api.CSPViolationReportBody.lineNumber
+  - api.CSPViolationReportBody.originalPolicy
+  - api.CSPViolationReportBody.referrer
+  - api.CSPViolationReportBody.sample
+  - api.CSPViolationReportBody.sourceFile
+  - api.CSPViolationReportBody.statusCode
+
+  # baseline: false
+  # support:
+  #   chrome: "80"
+  #   chrome_android: "80"
+  #   edge: "80"
+  - api.CSPViolationReportBody.toJSON
+
+  # baseline: false
+  # support:
   #   chrome: "84"
   #   chrome_android: "84"
   #   edge: "84"
