--- a/features/promise-any.yml
+++ b/features/promise-any.yml
@@ -3,8 +3,11 @@ description: The `Promise.any()` static method returns a promise that fulfills a
 snapshot: ecmascript-2021
 spec: https://tc39.es/ecma262/multipage/control-abstraction-objects.html#sec-promise.any
 group: promises
+status:
+  compute_from: javascript.builtins.Promise.any
 compat_features:
   - javascript.builtins.Promise.any
   - javascript.builtins.AggregateError
   - javascript.builtins.AggregateError.AggregateError
+  - javascript.builtins.AggregateError.serializable_object
   - javascript.builtins.AggregateError.errors
