Add more keys to `text-box`

--- a/features/text-box.yml
+++ b/features/text-box.yml
@@ -13,3 +13,10 @@ compat_features:
   - css.properties.text-box-trim.trim-end
   - css.properties.text-box-trim.trim-start
   - css.properties.text-box.normal
+  - css.types.text-edge
+  - css.types.text-edge.alphabetic
+  - css.types.text-edge.cap
+  - css.types.text-edge.ex
+  - css.types.text-edge.ideographic
+  - css.types.text-edge.ideographic-ink
+  - css.types.text-edge.text
